--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -15,12 +15,10 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v2.4.0
-        with:
-          token: ${{ github.token }}
 
       - name: Release using Semantic Releasing
         run: |
           npm install
           npx semantic-release
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.SEMANTIC_RELEASE_TOKEN }}
