--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -2,7 +2,11 @@ name: Test Kotlin App
 
 on:
   push:
+    branches-ignore:
+      - 'main'
   pull_request:
+    branches:
+      - 'main'
   workflow_call:
 
 jobs:
