--- a/.github/workflows/test-app.yml
+++ b/.github/workflows/test-app.yml
@@ -3,10 +3,10 @@ name: Test Kotlin App
 on:
   push:
     branches-ignore:
-      - 'main'
+      - "main"
   pull_request:
     branches:
-      - 'main'
+      - "main"
   workflow_call:
 
 jobs:
@@ -19,11 +19,8 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - name: Set up JDK 11
-        uses: actions/setup-java@v2
-        with:
-          java-version: '11'
-          distribution: 'adopt'
+      - name: Set up last supported Adopt JDK
+        uses: Daniele-Tentoni/my-setup-java-action@1.0.1
       - name: Validate Gradle wrapper
         uses: gradle/wrapper-validation-action@v1
       - name: Test with Gradle
